--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <div id="disp" style= 
         "color:green; font-size:18px; font-weight:bold;"> 
     </div>  
+  <div id="div1"> </div>
+  
 </body>  
     <script> 
         function display() {  
