--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <input type="radio" name="GFG" id="JS"
             value="JavaScript">JavaScript<br><br> 
       
-        <button type="button" onclick="display()"> 
+        <button type="button" onclick="click()"> 
             Submit 
         </button> 
     </form> 
