--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 $(document).ready(function(){
   $("button").click(function(){  
             if(document.getElementById('GFG').checked) { 
-     $("#div1").load("Untitled-3.html");} 
-        } }
+     $("#div1").load("Untitled-3.html")};
+        }) ;});
     </script> 
  
 </html>    
